2007-07-14  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua-keyserv.scm, src/kahua/session.scm
	  Now the connection between a worker process and kahua-keyserv
	  is persistent one.  This implementation assume that kahua-server
	  is a single thread program.

2007-07-05  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/server.scm
	  Add with-kahua-user/with-kahua-local-user.

	* Change: src/kahua/user.scm, test/user.scm
	  Add kahua-user? that check obj is a instance (kahua-current-user-class).

	* Change: src/kahua/server.scm
	  Now run-eval is invoked with context that has only session-state.
	  So we can easily simulate login session in kahua-shell.

2007-07-03  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: configurea.ac, cgi/Makefile.in
	  Add configure option --with-fastcgi-ext to specify extension of
	  FastCGI script.  Its default value is fcg yet.

2007-06-29  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: examples/lambdabooks.init, examples/foldlist/foldlist.kahua,
	          examples/lambdabooks/book.kahua, examples/lambdabooks/lambdabooks.kahua,
	          examples/lambdabooks/lister.kahua, examples/lambdabooks/login.kahua,
	          examples/lambdabooks/partner.kahua, examples/lambdabooks/review.kahua,
	          examples/lambdabooks/useradmin.kahua,
	          examples/lambdacalcul/lambdacalcul.kahua,
	          examples/lazy-nqueen/lazy-nqueen.kahua,
	          examples/login/login.kahua, examples/nqueen/nqueen.kahua,
	          examples/wiki-iki/wiki-iki.kahua, test/lambdabooks.scm,
	          test/wiki-iki.scm
	  Modernized.  Use index slot, higher-order tag functions, and change
	  character encoding of sources to UTF-8, and so on.

2007-06-25  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/persistence/dbi.scm, src/kahua/persistence/efs.scm,
	          src/kahua/persistence.scm
	  Improve more to keep consistency between index-caches and id-cache.

2007-06-20  Tatsuya BIZENN  <bizenn@arthub.net>
